k8s/22-gateway-api/edge-gw-applied-secret.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"Gateway","metadata":{"annotations":{},"name":"edge-gw","namespace":"gateway-system"},"spec":{"gatewayClassName":"nginx","listeners":[{"allowedRoutes":{"namespaces":{"from":"All"}},"hostname":"mygateway-app.local","name":"http","port":80,"protocol":"HTTP"},{"allowedRoutes":{"namespaces":{"from":"All"}},"hostname":"mygateway-app.local","name":"https","port":443,"protocol":"HTTPS","tls":{"certificateRefs":[{"kind":"Secret","name":"mygateway [...]
  creationTimestamp: "2026-06-30T23:23:02Z"
  generation: 2
  name: edge-gw
  namespace: gateway-system
  resourceVersion: "1996"
  uid: ea6b3398-f63b-447c-93ef-ba7b406db902
spec:
  gatewayClassName: nginx
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: mygateway-app.local
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: mygateway-app.local
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: mygateway-app-tls-secret
      mode: Terminate
status:
  addresses:
  - type: IPAddress
    value: 172.18.0.5
  attachedListenerSets: 0
  conditions:
  - lastTransitionTime: "2026-06-30T23:29:00Z"
    message: The Gateway is accepted
    observedGeneration: 2
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-06-30T23:29:00Z"
    message: The Gateway is programmed
    observedGeneration: 2
    reason: Programmed
    status: "True"
    type: Programmed
  listeners:
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: The Listener is programmed
      observedGeneration: 2
      reason: Programmed
      status: "True"
      type: Programmed
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: The Listener is accepted
      observedGeneration: 2
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: All references are resolved
      observedGeneration: 2
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: No conflicts
      observedGeneration: 2
      reason: NoConflicts
      status: "False"
      type: Conflicted
    name: http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
  - attachedRoutes: 1
    conditions:
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: The Listener is programmed
      observedGeneration: 2
      reason: Programmed
      status: "True"
      type: Programmed
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: The Listener is accepted
      observedGeneration: 2
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: All references are resolved
      observedGeneration: 2
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-06-30T23:29:00Z"
      message: No conflicts
      observedGeneration: 2
      reason: NoConflicts
      status: "False"
      type: Conflicted
    name: https
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
