k8s/22-gateway-api/httproute-mygateway-app-applied.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"HTTPRoute","metadata":{"annotations":{},"name":"mygateway-app","namespace":"myns"},"spec":{"hostnames":["mygateway-app.local"],"parentRefs":[{"name":"edge-gw","namespace":"gateway-system"}],"rules":[{"backendRefs":[{"name":"nginx-frontend","port":80}],"matches":[{"path":{"type":"PathPrefix","value":"/"}}]},{"backendRefs":[{"name":"nginx-api","port":80}],"matches":[{"path":{"type":"PathPrefix","value":"/api"}}]},{"backendRefs":[{"name":"n [...]
  creationTimestamp: "2026-06-29T10:57:05Z"
  generation: 1
  name: mygateway-app
  namespace: myns
  resourceVersion: "1046386"
  uid: 5aeaf6f7-8184-4b30-9067-417eb0607035
spec:
  hostnames:
  - mygateway-app.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: edge-gw
    namespace: gateway-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nginx-frontend
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - group: ""
      kind: Service
      name: nginx-api
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /api
  - backendRefs:
    - group: ""
      kind: Service
      name: nginx-admin
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /admin
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-06-29T10:57:06Z"
      message: The Route is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-29T10:57:06Z"
      message: All references are resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: gateway.nginx.org/nginx-gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: edge-gw
      namespace: gateway-system
      sectionName: http
