k8s/22-gateway-api/nginx-api-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-api-v2
  name: nginx-api-v2
spec:
  containers:
  - image: spurin/nginx-debug
    name: nginx-api-v2
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
