k8s/22-gateway-api/nginx-api.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-api
  name: nginx-api
spec:
  containers:
  - image: spurin/nginx-debug
    name: nginx-api
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
