k8s/22-gateway-api/nginx-gateway-secret.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge-gw
  namespace: gateway-system
spec:
  gatewayClassName: nginx # Must match the GatewayClass name
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: mygateway-app.local
    allowedRoutes:
      namespaces:
        from: All # Allows HTTPRoutes from any namespace to attach to this gateway
  - name: https
    protocol: HTTPS
    port: 443
    hostname: mygateway-app.local
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: mygateway-app-tls-secret # reference to the secret in the cluster
