k8s/22-gateway-api/redirects.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: myns
spec:
  parentRefs:
  - name: edge-gw
    namespace: gateway-system
    sectionName: http
  hostnames:
  - "mygateway-app.local"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:          # ← must be indented under the list item
        scheme: https
        statusCode: 301
